--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 VUE_APP_AWS_REGION=
 VUE_APP_AWS_COGNITO_USER_POOL_ID=
 VUE_APP_AWS_COGNITO_CLIENT_ID=
+VUE_APP_AWS_COGNITO_IDENTITY_POOL_ID=
+
+VUE_APP_BOT_NAME=
+VUE_APP_USER_ID=
